--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,22 +10,22 @@ html {
 
 @layer base {
   h1 {
-    font-size: var(--text-5xl);
+    font-size: var(--text-6xl);
   }
   h2 {
-    font-size: var(--text-4xl);
+    font-size: var(--text-5xl);
   }
   h3 {
-    font-size: var(--text-3xl);
+    font-size: var(--text-4xl);
   }
   h4 {
-    font-size: var(--text-2xl);
+    font-size: var(--text-3xl);
   }
   h5 {
-    font-size: var(--text-xl);
+    font-size: var(--text-2xl);
   }
   h6 {
-    font-size: var(--text-lg);
+    font-size: var(--text-xl);
   }
   p {
     font-size: var(--text-base);
@@ -43,5 +43,12 @@ html {
   --primary: #c9c9c9;
   --secondary: #ff4e08;
   --background: #000;
+  --paper: #242424;
+}
+
+.dark {
+  --primary: #000;
+  --secondary: #ff4e08;
+  --background: #c9c9c9;
   --paper: #242424;
 }
