--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -34,6 +34,8 @@ html {
 
 @theme inline {
   --color-primary: var(--primary);
+  --color-primary-text: var(--primary-text);
+
   --color-secondary: var(--secondary);
   --color-background: var(--background);
   --color-paper: var(--paper);
@@ -41,6 +43,7 @@ html {
 
 :root {
   --primary: #c9c9c9;
+  --primary-text: #000;
   --secondary: #ff4e08;
   --background: #000;
   --paper: #242424;
@@ -48,6 +51,7 @@ html {
 
 .dark {
   --primary: #000;
+  --primary-text: #c9c9c9;
   --secondary: #ff4e08;
   --background: #c9c9c9;
   --paper: #242424;
